<resources>
    <string name="app_name">Testing</string>
    <string name="add_movie">Add Movie</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="item">Item</string>
    <string name="sub_item">Sub item</string>
    <string name="add_button">Add Button</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="year">year</string>
    <string name="TextView">TextView</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="venue">Venue</string>
    <string name="location">Location</string>
    <string name="id">Id</string>
    <string name="image">image</string>
    <string name="attendees">Attendees</string>
    <string name="movie_title">Movie title</string>
    <string name="movie_year">Movie year</string>
    <string name="movie_image">Image</string>
    <string name="map">Map</string>
    <string name ="calculate">Calculate</string>
    <string name="distance">Distance</string>
    <string name="google_maps_API_KEY"> AIzaSyBmg3S6Gsc1E379YQht4t-1lD9dIuTcemA </string>
    <string name="next">Next</string>
</resources>
