<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.viewTemplate">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignLeft="@id/movieText"
        android:layout_alignBaseline="@id/movieText"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="206dp"
        android:text="@string/year"
        android:textSize="20sp"
        android:layout_alignBaseline="@id/yearText"

        />

    <EditText
        android:id="@+id/movieText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        />

    <EditText
        android:id="@+id/yearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_below="@id/movieText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:id="@+id/myOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_below="@id/yearText"
        android:layout_marginHorizontal="100dp"/>


    <Button
        android:id="@+id/myCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@id/yearText"
        android:layout_marginHorizontal="220dp"/>

</RelativeLayout>





</android.support.constraint.ConstraintLayout>