<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".View.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120px"
            android:layout_height="200px"
            android:id="@+id/image"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/myTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myTextView2"
            android:text="TextView"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/buttonDeleteRecyclerMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/delete"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="440dp" />

        <Button
            android:id="@+id/buttonEditRecyclerMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonDeleteRecyclerMovie"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/edit"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="440dp" />

        <Button
            android:id="@+id/buttonAddtoEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonEditRecyclerMovie"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/add_button"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="440dp" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>